--- a/backend/package.json
+++ b/backend/package.json
@@ -14,21 +14,23 @@
     "db:status": "node -e \"require('./config/database')().then(() => console.log('DB Connected')).catch(console.error)\""
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.6.3",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.3",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
   "keywords": [
-    "job-tracker", 
-    "mongodb", 
-    "express", 
-    "api", 
+    "job-tracker",
+    "mongodb",
+    "express",
+    "api",
     "cloud-storage",
     "rest-api",
     "nodejs"
